[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.1", features = ["derive", "env"] }
ctrlc = { version = "3.4.0", features = ["termination"] }
enum_derive = "0.1.7"
env_logger = "0.10.0"
log = "0.4.18"
regex = "1.8.3"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full", "io-util"] }
