[package]
name = "runner"
version = "0.2.0"
edition = "2021"
authors=["Pommaq"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.1", features = ["derive", "env"] }
ctrlc = { version = "3.4.0", features = ["termination"] }
env_logger = "0.10.0"
log = "0.4.18"
tokio = { version = "1.28.2", features = ["full"] }
